--- a/3.数据分析.md
+++ b/3.数据分析.md
@@ -38,18 +38,19 @@
     %pylab inline
     train_df['text_len'] = train_df['text'].apply(lambda x: len(x.split(' ')))
     print(train_df['text_len'].describe())
-================================
-Populating the interactive namespace from numpy and matplotlib
-count    50000.000000
-mean       904.589900
-std        961.345267
-min          2.000000
-25%        373.000000
-50%        670.500000
-75%       1123.000000
-max      44665.000000
-Name: text_len, dtype: float64
-=======================================
+输出结果
+
+    Populating the interactive namespace from numpy and matplotlib
+    count    50000.000000
+    mean       904.589900
+    std        961.345267
+    min          2.000000
+    25%        373.000000
+    50%        670.500000
+    75%       1123.000000
+    max      44665.000000
+    Name: text_len, dtype: float64
+
 
 对新闻句子的统计可以得出，本次赛题给定的文本比较长，每个句子平均由904个字符构成，最短的句子长度为2，最长的句子长度为44665。真是够长的啊！！！
 
@@ -97,15 +98,16 @@ Name: text_len, dtype: float64
     print(word_count[-2])
     print(word_count[-1])
     
-==============================
-6180
-('3750', 1863795)
-('648', 1225648)
-('900', 810253)
-('5764', 1)
-('5390', 1)
-('1766', 1)
-============================
+输出结果
+
+    6180
+    ('3750', 1863795)
+    ('648', 1225648)
+    ('900', 810253)
+    ('5764', 1)
+    ('5390', 1)
+    ('1766', 1)
+
 这里还可以根据字在每个句子的出现情况，反推出标点符号。下面代码统计了不同字符在句子中出现的次数，其中字符3750，字符900和字符648在采样的5w新闻的覆盖率接近99%，很有可能是标点符号。
 
     from collections import Counter
@@ -122,12 +124,11 @@ Name: text_len, dtype: float64
     print(word_count[1])
     print(word_count[2])
 
-=============================
-('3750', 49504)
-('900', 49433)
-('648', 47998)
+输出结果
+    ('3750', 49504)
+    ('900', 49433)
+    ('648', 47998)
 
-================================
 
 ### **数据分析的结论**
 
