Add second answer.

--- a/3.数据分析.md
+++ b/3.数据分析.md
@@ -156,10 +156,54 @@
 
 ### **作业答案**
 
-
+#### 作业1的答案
     
     import re
     train_df['sentence_num'] = train_df['text'].apply(lambda x:len( re.split('3750|900|648', x)))
     print(train_df['sentence_num'].describe())
+    
+#### 作业2答案
+
+    from collections import Counter
+    for i in range(0,13):
+        all_lines_category = ' '.join(list(train_df[train_df['label'] == i]['text']))
+        word_count = Counter(all_lines_category.split(" "))
+        word_count = sorted(word_count.items(), key=lambda d:int(d[1]), reverse = True)
+        
+        print("label:{}, max occurrence word:{}".format(i, word_count[0][0]))
+        for j in range(len(word_count)):
+            if word_count[j][0] not in ('3750', '900' , '648', '3370', '6122', '4939', '4464','7399', '2465','3659', '5560'):
+                print("label:{}, max occurrence word without stop words:{}".format(i, word_count[j][0]))
+                break
+                
+得到的结果
+    label:0, max occurrence word:3750
+    label:0, max occurrence word without stop words:4559
+    label:1, max occurrence word:3750
+    label:1, max occurrence word without stop words:5036
+    label:2, max occurrence word:3750
+    label:2, max occurrence word without stop words:4704
+    label:3, max occurrence word:3750
+    label:3, max occurrence word without stop words:4893
+    label:4, max occurrence word:3750
+    label:4, max occurrence word without stop words:4411
+    label:5, max occurrence word:3750
+    label:5, max occurrence word without stop words:5598
+    label:6, max occurrence word:3750
+    label:6, max occurrence word without stop words:6248
+    label:7, max occurrence word:3750
+    label:7, max occurrence word without stop words:5296
+    label:8, max occurrence word:3750
+    label:8, max occurrence word without stop words:913
+    label:9, max occurrence word:3750
+    label:9, max occurrence word without stop words:7328
+    label:10, max occurrence word:3750
+    label:10, max occurrence word without stop words:3523
+    label:11, max occurrence word:3750
+    label:11, max occurrence word without stop words:669
+    label:12, max occurrence word:3750
+    label:12, max occurrence word without stop words:6065
+    
+从上面结果看到，每个类别中出现最多的字符还是标点或者停用词3750, 除掉停用词或者标点3750，900，648后，发现3370,6122,4939,4464,7399,2465,'3659', '5560'也出现在好几个类别里，再去掉。
 
 
